tests/NormalTests/paczka1/fuzzy1/97392718.err
Error in line 16: S346 S749 34,1
Error in line 19: S346 A301 95,8
